# polyhedron

./: Cargo.toml
projects/polyhedron/: Cargo.toml
projects/polyhedron/src/: lib.rs
projects/polyhedron/src/conway/: display.rs  iters.rs  mod.rs  seeds.rs
