[package]
name = "polyhedron"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/polyhedra"
documentation = "https://docs.rs/polyhedron"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
#rayon = "1.7.0"
num-traits = "0.2.15"
shape-core = "0.1.7"
itertools = "0.13.0"

[dev-dependencies]

[features]
default = []
